--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x.cfg
@@ -16,7 +16,6 @@ dot1x system-auth-control
 dot1x protocol lldp bypass
 dot1x dynamic-authorization
 dot1x
-   !
    supplicant profile Profile1
       identity user_id1
       eap-method tls
@@ -26,6 +25,9 @@ dot1x
    supplicant profile Profile2
       identity user_id2
       passphrase 7 1048080A01
+   !
+   supplicant profile Profile3
+      ssl profile PF2
    aaa unresponsive phone action apply cached-results timeout 10 hours else traffic allow
    aaa unresponsive action traffic allow vlan 10
    aaa unresponsive eap response success
@@ -36,7 +38,6 @@ dot1x
    radius av-pair service-type
    radius av-pair framed-mtu 1500
    supplicant disconnect cached-results timeout 79 seconds
-   captive-portal
    captive-portal url http://portal-nacm08/captiveredirect/ ssl profile Profile1
    captive-portal access-list ipv4 ACL
    captive-portal start limit infinite
