--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -153,6 +153,7 @@ keys:
         keys:
           enabled:
             type: bool
+            description: The `enabled` key is mutually exclusive with `url` and `ssl_profile`.
           url:
             type: str
             description: |-
@@ -161,7 +162,6 @@ keys:
                 - https: https://<hostname>[:<port>]
           ssl_profile:
             type: str
-            description: SSL profile name.
           start_limit_infinite:
             type: bool
             description: Set captive-portal start limit to infinte.
@@ -206,7 +206,6 @@ keys:
                   description: Extensible Authentication Protocol password.
                 ssl_profile:
                   type: str
-                  description: SSL profile name.
           logging:
             type: bool
             description: Enable supplicant logging.
