Doc: Contribution Guide Updates (#3766)
Co-authored-by: Claus Holbech <holbech@arista.com>
Co-authored-by: JulioPDX <juliop503@gmail.com>
Co-authored-by: Alexey Gorbunov <131046560+alexeygorbunov@users.noreply.github.com>

--- a/ansible_collections/arista/avd/molecule/Makefile
+++ b/ansible_collections/arista/avd/molecule/Makefile
@@ -1,27 +1,27 @@
 
 MOLECULE ?= eos_cli_config_gen
-ANSIBLE_OPTIONS ?=
+ANSIBLE_OPTIONS ?= --forks 5
 
 .PHONY: help
-help: ## Display help message
+help: ## Display help message.
 	@grep -E '^[0-9a-zA-Z_-]+\.*[0-9a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
-###############################################################################
-# 			docker containers target									      #
-###############################################################################
+################################################################
+#                      Molecule Execution                      #
+################################################################
 
-.PHONY: run
-run: ## Execute molecule TEST sequence. By default eos_cli_config_gen. Can be set with MOLECULE=
+.PHONY: test
+test: ## Execute molecule "converge" sequence. Specify scenario name with `MOLECULE=<scenario_name>` (default: `eos_cli_config_gen`) and Ansible options with `ANSIBLE_OPTIONS=<options>` (default: `--forks 5`).
 	cd .. && \
 	molecule test --scenario-name $(MOLECULE) -- $(ANSIBLE_OPTIONS)
 
 .PHONY: converge
-converge: ## Execute molecule CONVERGE sequence. By default eos_cli_config_gen. Can be set with MOLECULE=
+converge: ## Execute molecule "converge" sequence. Specify scenario name with `MOLECULE=<scenario_name>` (default: `eos_cli_config_gen`) and Ansible options with `ANSIBLE_OPTIONS=<options>` (default: `--forks 5`).
 	cd .. && \
 	molecule converge --scenario-name $(MOLECULE) -- $(ANSIBLE_OPTIONS)
 
 .PHONY: refresh-facts
-refresh-facts: ## Run all molecule scenarios
+refresh-facts: ## Run all "eos_designs" and "eos_cli_config_gen" molecule scenarios.
 	@while read -r MOLECULE_SCENARIO; do \
 		if [ -d "$$MOLECULE_SCENARIO" ]; then\
 			echo "Run scenario for "$$MOLECULE_SCENARIO && \
@@ -30,27 +30,3 @@ refresh-facts: ## Run all molecule scenarios
 			cd ./molecule ; \
 		fi \
 	done <MOLECULE_SCENARIOS.txt
-
-.PHONY: commit-facts
-commit-facts: ## Commit updated facts for CI
-	git status --short
-	git add .
-	git commit --no-verify -m 'CI(molecule): Update Molecule artifacts' ./
-
-.PHONY: test-git-status
-test-git-status: ## Run post molecule script to check git status
-	sh ../../../../.github/git-repo-state-monitor.sh
-
-.PHONY: sync-facts
-sync-facts: refresh-facts commit-facts ## Refresh and commit CI artifacts
-
-.PHONY: cleanup
-destroy: ## destroy all molecule scenarios
-	@for MOLECULE_SCENARIO in * ; do \
-        if [ -d "$$MOLECULE_SCENARIO" ]; then\
-        echo "Run scenario for "$$MOLECULE_SCENARIO && \
-		cd .. ; \
-		molecule cleanup --scenario-name $$MOLECULE_SCENARIO -- $(ANSIBLE_OPTIONS); \
-		cd ./molecule ; \
-        fi \
-    done
