--- a/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/intended/test_catalogs/dc1-wan2-catalog.yml
@@ -262,6 +262,24 @@ anta.tests.security:
     profile: eAPI_SSL_Profile
     result_overwrite:
       custom_field: 'eAPI HTTPS SSL Profile: eAPI_SSL_Profile'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.255.10
+      vrf: default
+    result_overwrite:
+      custom_field: 'IPv4 Peer: 10.255.255.10 VRF: default'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.255.20
+      vrf: default
+    result_overwrite:
+      custom_field: 'IPv4 Peer: 10.255.255.20 VRF: default'
+- VerifySpecificIPSecConn:
+    ip_security_connections:
+    - peer: 10.255.1.1
+      vrf: default
+    result_overwrite:
+      custom_field: 'IPv4 Peer: 10.255.1.1 VRF: default'
 - VerifySSHStatus: null
 - VerifySSHIPv4Acl:
     number: 3
