--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -239,3 +239,23 @@ keys:
         reload_delay:
           mlag: 300
           non_mlag: 330
+      - platforms:
+          - AWE-5310
+          - AWE-5510
+          - AWE-7250R
+          - AWE-7230R
+        feature_support:
+          bgp_update_wait_for_convergence: true
+          bgp_update_wait_install: false
+          interface_storm_control: false
+          queue_monitor_length_notify: false
+        management_interface: Management1/1
+      - platforms:
+          - AWE-7220R
+        feature_support:
+          bgp_update_wait_for_convergence: true
+          bgp_update_wait_install: false
+          interface_storm_control: false
+          queue_monitor_length_notify: false
+          poe: true
+        management_interface: Management1
