Fix(eos_designs): Inband mgmt route-map and prefix-list should not be applied without overlay_routing_protocol (#4045)

--- a/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/BGP-SPINE2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs-l2ls/intended/configs/BGP-SPINE2.cfg
@@ -25,6 +25,9 @@ vlan 200
 vlan 220
    name SVI_220
 !
+vlan 4092
+   name INBAND_MGMT
+!
 vlan 4094
    name MLAG_PEER
    trunk group MLAG
@@ -35,7 +38,7 @@ interface Port-Channel1
    description BGP-LEAF1_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 1,100,200
+   switchport trunk allowed vlan 1,100,200,4092
    switchport mode trunk
    mlag 1
 !
@@ -43,7 +46,7 @@ interface Port-Channel2
    description BGP-LEAF2_Po1
    no shutdown
    switchport
-   switchport trunk allowed vlan 100
+   switchport trunk allowed vlan 100,4092
    switchport mode trunk
    mlag 2
 !
@@ -107,6 +110,14 @@ interface Vlan220
    no shutdown
    ip address virtual 10.1.220.1/24
 !
+interface Vlan4092
+   description Inband Management
+   no shutdown
+   mtu 1500
+   ip address 172.23.254.3/24
+   ip attached-host route export 19
+   ip virtual-router address 172.23.254.1
+!
 interface Vlan4094
    description MLAG_PEER
    no shutdown
@@ -154,6 +165,7 @@ router bgp 65001
    neighbor 192.168.253.7 description DUMMY-CORE
    neighbor 192.168.254.0 peer group MLAG-IPv4-UNDERLAY-PEER
    neighbor 192.168.254.0 description BGP-SPINE1
+   redistribute attached-host
    redistribute connected
    redistribute static
    !
