Refactor(plugins): Move jinja filter code for `arista.avd.default` to PyAVD (#4047)

--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -84,7 +84,11 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python_version: [ "3.9", "3.10", "3.11", "3.12" ]
+        python_version:
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
     steps:
       - name: 'Set environment variables'
         run: |
@@ -97,7 +101,7 @@ jobs:
           python-version: ${{ matrix.python_version }}
       - name: 'Install Python requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install -r ansible_collections/arista/avd/requirements-dev.txt  -r ansible_collections/arista/avd/requirements.txt --upgrade
 
   # ----------------------------------- #
   # EOS CLI CONFIG GEN MOLECULE
@@ -132,7 +136,7 @@ jobs:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'test'
           molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
-          pip_file: ansible_collections/arista/avd/requirements.txt
+          pip_file: .github/requirements-ci.txt
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
           check_git: true
@@ -167,7 +171,7 @@ jobs:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'test'
           molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
-          pip_file: ansible_collections/arista/avd/requirements.txt
+          pip_file: .github/requirements-ci.txt
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
           check_git: true
@@ -206,7 +210,7 @@ jobs:
           # Testing all scenario with 2.16.x, due to bug with in 2.17.0 with and the way we test eos_designs_negative_unit_tests https://github.com/ansible/ansible/issues/83292
           - 'ansible-core>=2.16.0,<2.17.0 --upgrade'
         pip_requirements:
-          - 'ansible_collections/arista/avd/requirements.txt'
+          - '.github/requirements-ci.txt'
         # Also test minimum ansible version for one scenario.
         include:
           - avd_scenario: 'eos_designs_unit_tests'
@@ -214,10 +218,10 @@ jobs:
             pip_requirements: 'tmp-requirements-minimum.txt'
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core>=2.15.0,<2.16.0 --upgrade'
-            pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
+            pip_requirements: '.github/requirements-ci.txt'
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core<2.18.0 --upgrade'
-            pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
+            pip_requirements: '.github/requirements-ci.txt'
     needs: [ file-changes ]
     if: needs.file-changes.outputs.eos_design == 'true' || needs.file-changes.outputs.config_gen == 'true'
     steps:
@@ -229,7 +233,7 @@ jobs:
       - name: Build minimum requirements
         run: |
           pip install uv
-          uv pip compile ansible_collections/arista/avd/requirements.txt --resolution=lowest-direct > ${{ matrix.pip_requirements }}
+          uv pip compile .github/requirements-ci.txt --resolution=lowest-direct > ${{ matrix.pip_requirements }}
           cat ${{ matrix.pip_requirements }}
         if: matrix.pip_requirements == 'tmp-requirements-minimum.txt'
       - name: Run molecule action
@@ -277,7 +281,7 @@ jobs:
           molecule_parentdir: 'ansible_collections/arista/avd'
           molecule_command: 'test'
           molecule_args: '--scenario-name ${{ matrix.avd_scenario }}'
-          pip_file: ansible_collections/arista/avd/requirements.txt
+          pip_file: .github/requirements-ci.txt
           galaxy_file: "ansible_collections/arista/avd/collections.yml"
           ansible: ${{ matrix.ansible_version }}
           check_git: true
@@ -347,11 +351,11 @@ jobs:
             3.12
       - name: 'Install Python requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
       - name: 'Run ansible-test sanity'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test sanity --color yes -v --requirements --docker
+          ansible-test sanity --color yes -v
 
   ansible_test_units:
     name: Run ansible-test units test cases
@@ -362,13 +366,18 @@ jobs:
         run: |
           echo "PY_COLORS=1" >> $GITHUB_ENV
       - uses: actions/checkout@v4
+      - name: Set up Python 3
+        uses: actions/setup-python@v5
+        with:
+          python-version: |
+            3.10
       - name: 'Install Python requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install mock pytest pytest-mock pytest-xdist pyyaml -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
       - name: 'Run ansible-test units test cases'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test units --requirements --docker -vv
+          ansible-test units -vv
 
   ansible_test_integration:
     name: Run ansible-test integration test cases
@@ -388,11 +397,11 @@ jobs:
             3.12
       - name: 'Install Python requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
       - name: 'Run ansible-test integration test cases'
         run: |
           cd ansible_collections/arista/avd/
-          ansible-test integration --requirements --docker -vv
+          ansible-test integration -vv
 
   ansible_lint:
     name: Run ansible-lint test case
@@ -412,7 +421,7 @@ jobs:
             3.12
       - name: 'Install Python & Ansible requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
           ansible-galaxy collection install -r ansible_collections/arista/avd/collections.yml
       - name: 'Run ansible-test integration test cases'
         run: |
@@ -436,7 +445,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: 'Install Python & Ansible requirements'
         run: |
-          pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          pip install -r ansible_collections/arista/avd/requirements-dev.txt -r ansible_collections/arista/avd/requirements.txt --upgrade
           ansible-galaxy collection install -r ansible_collections/arista/avd/collections.yml
       - name: Install galaxy-importer
         # Install the specific version of galaxy-importer used on galaxy.ansible.com
