--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/hosts.yml
@@ -560,5 +560,5 @@ all:
             DUP-LEAF2:
         PLATFORM_SETTINGS_TESTS:
           hosts:
-            750-LEAF:
-            7010TX-LEAF:
+            7010TX-LEAF1:
+            7010TX-LEAF2:
