--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10848,6 +10848,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                       - deny
                       - deny-in-out
@@ -11110,6 +11111,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                       - deny
                       - deny-in-out
