--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -342,6 +342,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                         - deny
                         - deny-in-out
@@ -589,6 +590,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                         - deny
                         - deny-in-out
