issue-3249: fix the required key

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10870,6 +10870,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                       - deny
                       - deny-in-out
@@ -11133,6 +11134,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                       - deny
                       - deny-in-out
