--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -363,6 +363,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                         - deny
                         - deny-in-out
@@ -611,6 +612,7 @@ keys:
                     action:
                       description: Missing policy action options.
                       type: str
+                      required: true
                       valid_values:
                         - deny
                         - deny-in-out
