--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/patch-panel.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/patch-panel.cfg
@@ -13,6 +13,9 @@ interface Management1
    ip address 10.73.255.122/24
 !
 patch panel
+   connector interface recovery review delay 10 900
+   connector interface patch bgp vpws remote-failure errdisable
+   !
    patch TEN_B_site2_site5_eline
       connector 1 interface Ethernet5
       connector 2 pseudowire bgp vpws TENANT_A pseudowire TEN_B_site2_site5_eline
