--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -159,6 +159,14 @@ keys:
           mlag: 300
           non_mlag: 330
       - platforms:
+          - 7010TX
+        feature_support:
+          queue_monitor_length_notify: false
+          per_interface_mtu: false
+        reload_delay:
+          mlag: 300
+          non_mlag: 330
+      - platforms:
           - 7280R
           - 7280R2
           - 7020R
