Feat(eos_cli_config_gen): Add support for MACsec fallback to unprotected traffic (#4028)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/mac-security-eth-po-entropy.cfg
@@ -12,13 +12,16 @@ mac security
       key 1234c 7 10195F4C5144405A fallback
       mka key-server priority 100
       mka session rekey-period 30
+      traffic unprotected allow
       sci
       l2-protocol lldp bypass unauthorized
    profile A2
       key 1234b 7 12485744465E5A53
+      traffic unprotected allow active-sak
    profile A3
       cipher aes256-gcm-xpn
       key ab 7 10195F4C5144405A
+      traffic unprotected drop
 !
 hostname mac-security-eth-po-entropy
 !
