--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -5862,6 +5862,20 @@ keys:
                       valid_values:
                       - bypass
                       - bypass unauthorized
+            traffic_unprotected:
+              type: dict
+              keys:
+                action:
+                  type: str
+                  required: true
+                  description: Allow/drop the transmit/receive of unprotected traffic.
+                  valid_values:
+                  - allow
+                  - drop
+                allow_active_sak:
+                  type: bool
+                  description: Allow transmit/receive of encrypted traffic using operational
+                    SAK and block otherwise.
   maintenance:
     type: dict
     display_name: Maintenance Mode
