Fix(eos_designs): core_interfaces generates invalid config if ASN is not defined for the p2p_links/p2p_links_profiles (#4046)

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -121,6 +121,7 @@ all:
             ul-filter-evpn-default-vrf-services:
             sflow-settings-missing-inband-mgmt-interface:
             sflow-settings-missing-mgmt-ip:
+            core-interfaces-p2p-links-as:
 
           children:
             duplicate-vlans-mlag:
