Feat(cv_deploy): Add hop count to metadata studio

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -7006,6 +7006,8 @@ keys:
                             type: str
                             convert_types:
                             - float
+                          hop_count:
+                            type: str
                       description:
                         type: str
                       id:
