--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-pathfinder2.yml
@@ -668,6 +668,7 @@ metadata:
       avts:
       - constraints:
           jitter: 42
+          hop_count: lowest
         id: 2
         name: PROD-AVT-POLICY-VOICE
         pathgroups:
