--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/metadata.schema.yml
@@ -170,6 +170,8 @@ keys:
                             type: str
                             convert_types:
                               - float
+                          hop_count:
+                            type: str
                       description:
                         type: str
                       id:
