issue-4041: Added the support for IPv6 static neighbors

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -58,6 +58,7 @@ ip-tacacs-source-interface
 ip-client-source-interfaces
 ipv6-access-lists
 ipv6-dhcp-relay
+ipv6-neighbors
 ipv6-static-routes
 l2-protocol-forwarding
 lacp
