--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -5117,6 +5117,43 @@ keys:
                       name.
   ipv6_icmp_redirect:
     type: bool
+  ipv6_neighbor:
+    type: dict
+    keys:
+      static_entries:
+        type: list
+        description: Static IPv6 neighbors entries.
+        items:
+          type: dict
+          keys:
+            ipv6_address:
+              type: str
+              required: true
+              description: IPv6 address of neighbor.
+            vrf:
+              type: str
+            interface:
+              type: str
+              required: true
+            mac_address:
+              type: str
+              required: true
+              description: Hardware address of neighbor.
+              pattern: ^(?:[0-9A-Fa-f]{1,4}\.){2}[0-9A-Fa-f]{1,4}$
+      cache:
+        type: bool
+        description: Manage the IPv6 neighbor cache.
+      persistent:
+        type: bool
+        description: Restore the IPv6 neighbor cache after reboot.
+      refresh_delay:
+        type: int
+        description: Time to wait in seconds before refresh.
+        default: 600
+        min: 600
+        max: 3600
+        convert_types:
+        - str
   ipv6_prefix_lists:
     type: list
     primary_key: name
