--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/cv-pathfinder-edge1.yml
@@ -6,3 +6,8 @@
 # serial_number: mockZscaler
 # cv_server: "www.cv-play.corp.arista.io"
 # zscaler_endpoints: null
+
+# Testing multiple pathinfders on one device
+wan_route_servers:
+  - hostname: cv-pathfinder-pathfinder1
+  - hostname: cv-pathfinder-pathfinder2
