--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/patch_panel.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/patch_panel.schema.yml
@@ -9,11 +9,42 @@ keys:
   patch_panel:
     type: dict
     keys:
+      connector:
+        type: dict
+        keys:
+          interface:
+            type: dict
+            keys:
+              patch:
+                type: dict
+                keys:
+                  bgp_vpws_remote_failure_errdisable:
+                    type: bool
+              recovery:
+                type: dict
+                keys:
+                  review_delay:
+                    type: dict
+                    keys:
+                      min:
+                        type: int
+                        required: true
+                        min: 10
+                        convert_types:
+                          - str
+                        description: Minimum delay (10-600).
+                      max:
+                        type: int
+                        required: true
+                        min: 15
+                        convert_types:
+                          - str
+                        description: Maximum delay (15-900).
       patches:
         type: list
         primary_key: name
         convert_types:
-        - dict
+          - dict
         items:
           type: dict
           keys:
@@ -25,7 +56,7 @@ keys:
               type: list
               primary_key: id
               convert_types:
-              - dict
+                - dict
               min_length: 2
               max_length: 2
               description: Must have exactly two connectors to a patch of which at least one must be of type "interface".
@@ -35,12 +66,12 @@ keys:
                   id:
                     type: str
                     convert_types:
-                    - int
+                      - int
                   type:
                     type: str
                     valid_values:
-                    - interface
-                    - pseudowire
+                      - interface
+                      - pseudowire
                     required: true
                   endpoint:
                     type: str
