--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -101,6 +101,8 @@ all:
             ipv4-acl-in-missing-on-wan-interface:
             ipv4-acls:
             missing-avt-id-cv-pathfinder:
+            missing-prefix-list-in-cv-pathfinder:
+            missing-prefix-list-definition-cv-pathfinder:
             missing-data-plane_cpu-allocation-max:
             ntp-settings-server-vrf-missing-mgmt-ip:
             ntp-settings-server-vrf-missing-inband-mgmt-interface:
