--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -5,6 +5,18 @@ wan_mode: cv-pathfinder
 # the default is "none" for WAN routers"
 underlay_routing_protocol: ebgp
 
+ipv4_prefix_list_catalog:
+  - name: ALLOW-DEFAULT
+    sequence_numbers:
+      - sequence: 10
+        action: permit 0.0.0.0/0
+  - name: PL2
+    sequence_numbers:
+      - sequence: 10
+        action: permit 5.0.0.0/0
+      - sequence: 20
+        action: deny 10.00.0.0/24
+
 cv_pathfinder_regions:
   - name: AVD_Land_West
     id: 42
@@ -104,6 +116,10 @@ wan_router:
               ip_address: dhcp
               flow_tracking:
                 enabled: true
+              peer_ip: 172.16.9.4
+              bgp:
+                peer_as: 64520
+                ipv4_prefix_list_in: ALLOW-DEFAULT
             - name: Ethernet2
               wan_carrier: Colt
               wan_circuit_id: 10555
@@ -114,6 +130,10 @@ wan_router:
               cv_pathfinder_internet_exit:
                 policies:
                   - name: DIRECT-EXIT-POLICY-1
+              bgp:
+                peer_as: 64520
+                ipv4_prefix_list_in: ALLOW-DEFAULT
+                ipv4_prefix_list_out: ALLOW-DEFAULT
             - name: Ethernet2/1
               wan_carrier: Colt
               wan_circuit_id: 10555
@@ -167,6 +187,21 @@ wan_router:
                     tunnel_interface_numbers: 110-112
                   - name: DIRECT-EXIT-POLICY-1
                   - name: DIRECT-EXIT-POLICY-2
+            - name: Ethernet4
+              dhcp_accept_default_route: true
+              ip_address: dhcp
+              peer_ip: 172.29.0.13
+              bgp:
+                peer_as: 64520
+                ipv4_prefix_list_in: PL2
+                ipv4_prefix_list_out: ALLOW-DEFAULT
+            - name: Ethernet5
+              dhcp_accept_default_route: true
+              ip_address: dhcp
+              peer_ip: 172.28.0.14
+              bgp:
+                peer_as: 64520
+                ipv4_prefix_list_out: PL2
     # SITE_HA_ENABLED
     - group: Site423
       cv_pathfinder_region: AVD_Land_West
