Addressing review comments

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/event-handlers.cfg
@@ -73,6 +73,8 @@ event-handler trigger-on-maintenance3
 !
 event-handler trigger-on-maintenance4
 !
+event-handler trigger-on-maintenance5
+!
 event-handler trigger-vm-tracer
    trigger vm-tracer vm
    action bash echo "vm-tracer vm"
