Fix(cvp_configlet_upload): Add tag always to main's generic task triggering v1/v3

--- a/ansible_collections/arista/avd/roles/cvp_configlet_upload/tasks/main.yml
+++ b/ansible_collections/arista/avd/roles/cvp_configlet_upload/tasks/main.yml
@@ -25,4 +25,5 @@
   register: cvp_vars
 
 - name: "Execute upload with collection in version {{ cv_collection }}"
+  tags: [always]
   ansible.builtin.include_tasks: "cv_collection_{{ cv_collection }}.yml"
