Refactor: Address PR comments

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -516,15 +516,15 @@ ip route 10.50.9.1/32 172.20.20.21 name IE-ZSCALER-TER
 ip nat pool PORT-ONLY-POOL port-only
    port range 1500 65535
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Set SOO on prefixes from the site.
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
+   description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.42.1:511 additive
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Advertise local routes towards LAN
-   match route-type local
+   match extcommunity ECL-EVPN-SOO
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
