--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2B.cfg
@@ -380,8 +380,8 @@ route-map RM-BGP-UNDERLAY-PEERS-IN deny 20
    description Deny other routes from the HA peer
    match as-path ASPATH-WAN
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Set SOO on prefixes from the site.
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
+   description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.42.2:423 additive
 !
 route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
