--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge3B.cfg
@@ -283,15 +283,15 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.6:404
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
 !
-route-map RM-BGP-UNDERLAY-PEERS-IN permit 30
-   description Set SOO on prefixes from the site.
+route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
+   description Mark prefixes originated from the LAN
    set extcommunity soo 192.168.42.6:404 additive
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 10
    description Advertise local routes towards LAN
-   match route-type local
+   match extcommunity ECL-EVPN-SOO
 !
-route-map RM-BGP-UNDERLAY-PEERS-OUT permit 30
+route-map RM-BGP-UNDERLAY-PEERS-OUT permit 20
    description Advertise routes received from WAN iBGP towards LAN
    match route-type internal
 !
