--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
@@ -336,9 +336,9 @@ route_maps:
     - ip address prefix-list PL-WAN-HA-PREFIXES
 - name: RM-BGP-UNDERLAY-PEERS-IN
   sequence_numbers:
-  - sequence: 30
+  - sequence: 40
     type: permit
-    description: Set SOO on prefixes from the site.
+    description: Mark prefixes originated from the LAN
     set:
     - extcommunity soo 192.168.42.2:423 additive
   - sequence: 10
@@ -353,6 +353,14 @@ route_maps:
     - as-path ASPATH-WAN
 - name: RM-BGP-UNDERLAY-PEERS-OUT
   sequence_numbers:
+  - sequence: 10
+    type: permit
+    description: Make tagged routes received from WAN HA peer less preferred for LAN router
+    match:
+    - tag 50
+    - route-type internal
+    set:
+    - metric 50
   - sequence: 20
     type: permit
     description: Advertise local routes towards LAN
@@ -363,14 +371,6 @@ route_maps:
     description: Advertise routes received from WAN iBGP towards LAN
     match:
     - route-type internal
-  - sequence: 10
-    type: permit
-    description: Make tagged routes received from WAN HA peer less preferred for LAN router
-    match:
-    - tag 50
-    - route-type internal
-    set:
-    - metric 50
   - sequence: 40
     type: permit
     description: Advertise WAN HA prefixes towards LAN
