--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_flow_tracking.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/fabric_flow_tracking.schema.yml
@@ -47,7 +47,7 @@ keys:
         description: Enable flow-tracking on all dps_interfaces.
         type: dict
         $ref: eos_designs#/$defs/flow_tracking_link
-      wan_ha_links:
-        description: Enable flow-tracking on all non uplink WAN HA links..
+      direct_wan_ha_links:
+        description: Enable flow-tracking on all direct WAN HA links.
         type: dict
         $ref: eos_designs#/$defs/flow_tracking_link
